--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -249,7 +249,7 @@ const Example = () => {
       <Box
         as="span"
         sx={{
-          background: 'linear-gradient(to right, #30CFD0 0%, #330867 100%)',
+          background: 'linear-gradient(to right, red 0%, #330867 100%)',
           WebkitBackgroundClip: 'text',
           WebkitTextFillColor: 'transparent',
         }}
