--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -1,5 +1,5 @@
 import {HeroLayout} from '@primer/gatsby-theme-doctocat'
-import {LinkButton, Box, Heading, Text} from '@primer/react'
+import {Button, Box, Heading, Text} from '@primer/react'
 import {MarkGithubIcon} from '@primer/octicons-react'
 import {Link} from 'gatsby'
 
@@ -30,20 +30,20 @@ import {Link} from 'gatsby'
       columnGap: '0.75rem',
     }}
   >
-    <LinkButton href="/react-brand/getting-started" variant="outline">
+    <Button href="/react-brand/getting-started" variant="outline">
       Installation instructions
-    </LinkButton>
-    <LinkButton href="/react-brand/storybook" variant="outline" target="_blank">
+    </Button>
+    <Button href="/react-brand/storybook" variant="outline" target="_blank">
       Storybook
-    </LinkButton>
-    <LinkButton
+    </Button>
+    <Button
       href="https://github.com/primer/react-brand"
       variant="outline"
       leadingIcon={MarkGithubIcon}
       target="_blank"
     >
       Contribute
-    </LinkButton>
+    </Button>
   </Box>
 </Box>
 
