--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -22,7 +22,7 @@ import {River} from '@primer/react-brand'
 
 ```jsx live
 <Container p={3}>
-  <River align="left">
+  <River>
     <River.Visual>
       <img
         src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
