--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -5,7 +5,12 @@ source: https://github.com/primer/react-brand/tree/main/src/River/River.tsx
 description: Render text and image pairs
 ---
 
-import {Label} from '@primer/react'
+import {Box as Container, Label} from '@primer/react'
+import {
+  defaultRiverImageTextRatio,
+  defaultRiverAlign,
+} from '@primer/react-brand'
+import {PropTableValues} from '../../src/components'
 
 ```js
 import {River} from '@primer/react-brand'
@@ -16,41 +21,152 @@ import {River} from '@primer/react-brand'
 ### Default
 
 ```jsx live
-<River>
-  <River.Visual>
-    Bring your own component (BYOC) img or ReactNode (E.g. Next.js img)
-  </River.Visual>
-  <River.Content>
-    <Heading>Collaboration that goes beyond code</Heading>
-    <Text as="p">
-      Build your business fast with access to the world’s largest open source
-      registry. Host it in the cloud with unlimited free public and private
-      repositories. Start conversations, propose changes, and get feedback with
-      a pull request.
-    </Text>
-    <LinkButton>Learn more</LinkButton>
-  </River.Content>
-</River>
+<Container p={3}>
+  <River>
+    <River.Visual>
+      <img
+        src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
+        alt="placeholder, blank area with an off-white background color"
+      />
+    </River.Visual>
+    <River.Content>
+      <Heading>Heading</Heading>
+      <Text>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit
+        ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus
+        elementum.
+      </Text>
+      <Link href="#">Call to action</Link>
+    </River.Content>
+  </River>
+  <River align="right">
+    <River.Visual>
+      <img
+        src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
+        alt="placeholder, blank area with an off-white background color"
+      />
+    </River.Visual>
+    <River.Content>
+      <Heading>Heading</Heading>
+      <Text>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit
+        ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus
+        elementum.
+      </Text>
+      <Link href="#">Call to action</Link>
+    </River.Content>
+  </River>
+  <River align="center">
+    <River.Visual>
+      <img
+        src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
+        alt="placeholder, blank area with an off-white background color"
+      />
+    </River.Visual>
+    <River.Content>
+      <Heading>Heading</Heading>
+      <Text>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit
+        ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus
+        elementum.
+      </Text>
+      <Link href="#">Call to action</Link>
+    </River.Content>
+  </River>
+</Container>
+```
+
+### Image to text ratio
+
+```jsx live
+<Container p={3}>
+  {/* 50/50 (default) example */}
+  <River>
+    <River.Visual>
+      <img
+        src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
+        alt="placeholder, blank area with an off-white background color"
+      />
+    </River.Visual>
+    <River.Content>
+      <Heading>50/50</Heading>
+      <Text>
+        <strong>By default</strong>, River applies a 50/50 image to text split.
+      </Text>
+    </River.Content>
+  </River>
+  {/* 60/40 example */}
+  <River imageTextRatio="60:40">
+    <River.Visual>
+      <img
+        src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
+        alt="placeholder, blank area with an off-white background color"
+      />
+    </River.Visual>
+    <River.Content>
+      <Heading>60/40</Heading>
+      <Text>This example applies an optional 60/40 image to text split.</Text>
+    </River.Content>
+  </River>
+</Container>
+```
+
+### Video
+
+```jsx live
+<Container p={3}>
+  <River imageTextRatio="60:40">
+    <River.Visual hasShadow={false}>
+      <video
+        loop
+        playsInline
+        autoPlay
+        muted
+        aria-hidden="true"
+        poster="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress-placeholder.png"
+      >
+        <source
+          type="video/mp4; codecs=hevc,mp4a.40.2"
+          src="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress.hevc.mp4"
+        />
+        <source
+          type="video/mp4; codecs=avc1.4D401E,mp4a.40.2"
+          src="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress.h264.mp4"
+        />
+      </video>
+    </River.Visual>
+    <River.Content>
+      <Heading>Break issues into actionable tasks</Heading>
+      <Text>
+        Tackle complex issues with task lists and track their status with new
+        progress indicators. Convert tasks into their own issues and navigate
+        your work hierarchy.
+      </Text>
+    </River.Content>
+  </River>
+</Container>
 ```
 
 ## Component props
 
 ### River <Label>Required</Label>
 
-| Name         | Type                            |   Default   | Description                                                                |
-| :----------- | :------------------------------ | :---------: | :------------------------------------------------------------------------- |
-| `align`      | `'left'`, `'right'`, `'center'` |  `'left'`   | Alignment of text content relative to the Visual position                  |
-| `imageRatio` | `'50/50'`, `'60/40'`            |  `'60/40'`  | The aspect ratio applied to the image. Affects overall layout proportions. |
-| `as`         | `'section'`, `'div' `           | `'section'` | HTML tag to be used in the parent element                                  |
+| Name             | Type                            |                          Default                          | Description                                                                                                 |
+| :--------------- | :------------------------------ | :-------------------------------------------------------: | :---------------------------------------------------------------------------------------------------------- |
+| `align`          | `'left'`, `'right'`, `'center'` |     <PropTableValues values={[defaultRiverAlign]} />      | Alignment of text content relative to the Visual position                                                   |
+| `imageTextRatio` | `'50:50'`, `'60:40'`            | <PropTableValues values={[defaultRiverImageTextRatio]} /> | The aspect ratio applied to the image in relation to the adjacent text. Affects overall layout proportions. |
 
 ### River.Visual <Label>Required</Label>
 
-| Name       | Type           | Default | Description                                                                           |
-| :--------- | :------------- | :-----: | :------------------------------------------------------------------------------------ |
-| `children` | `ReactElement` |         | Bring your own component (BYOC) `img` or `ReactNode` (E.g. Next.js `Image` component) |
+| Name        | Type           | Default | Description                                                                                                      |
+| :---------- | :------------- | :-----: | :--------------------------------------------------------------------------------------------------------------- |
+| `children`  | `ReactElement` |         | Bring your own component (BYOC) `img` or `ReactElement` (E.g. Next.js `Image` component)                         |
+| `hasShadow` | `boolean`      | `true`  | Shadow automatically applied to the `children`. Set be `false` when the child node has a transparent background. |
 
 ### River.Content <Label>Required</Label>
 
-| Name       | Type                                          | Default | Description |
-| :--------- | :-------------------------------------------- | :-----: | :---------- |
-| `children` | `Text`,`Heading`, `LinkButton`, `River.Quote` |         |             |
+[`Text`](https://primer.style/react-brand/components/Text),[`Heading`](https://primer.style/react-brand/components/Heading), [`Link`](https://primer.style/react-brand/components/Link) are the only `children` accepted. They can be composed in any order, but their rendered output will always be in the in the predetermined order.
+
+| Name       | Type                                                                                                                                                                                    | Default | Description                                      |
+| :--------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-----: | :----------------------------------------------- |
+| `children` | [`Text`](https://primer.style/react-brand/components/Text),[`Heading`](https://primer.style/react-brand/components/Heading), [`Link`](https://primer.style/react-brand/components/Link) |         | Content that corrosponds to the adjacent visual. |
