add storybook link for River to docs

--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -2,6 +2,7 @@
 title: River
 status: Experimental
 source: https://github.com/primer/react-brand/tree/main/src/River/River.tsx
+storybook: '/react-brand/storybook/?path=/story/components-river--default'
 description: Render text and image pairs
 ---
 
