--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -4,16 +4,11 @@ import {Link, Button, Heading, Text} from '@primer/react-brand'
 
 <Box
   sx={{
-    borderWidth: '1px',
-    borderStyle: 'solid',
-    borderColor: 'border.default',
-    borderRadius: 2,
-    bg: 'gray.1',
     p: 5,
     mt: 5,
   }}
 >
-  <Heading as="h4">Using Primer React Brand</Heading>
+  <Heading as="h4">Primer React Brand</Heading>
   <Text as="p">Read the installation instructions to get started.</Text>
   <Box
     sx={{
