--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -30,7 +30,7 @@ import {FAQ} from '@primer/react-brand'
           All GitHub for Startups companies receive up to 20 seats of GitHub
           Enterprise for free for year one and 50% off year two. Learn more
           about the features and capabilities of GitHub Enterprise{' '}
-          <a href="#" target="_blank" rel="noreferrer">
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             here
           </a>
           .
@@ -76,7 +76,7 @@ import {FAQ} from '@primer/react-brand'
         <p>
           If you’re not currently eligible for the GitHub for Startups but would
           like to try GitHub Enterprise, please feel to sign up for a trial
-          <a href="#" target="_blank" rel="noreferrer">
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             here
           </a>.
         </p>
@@ -92,10 +92,10 @@ import {FAQ} from '@primer/react-brand'
           to apply for the GitHub for Startups program.
         </p>
         <p>
-          {' '}
-          <a href="#" target="_blank" rel="noreferrer">
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             Apply here
-          </a>.
+          </a>
+          .
         </p>
       </Accordion.Content>
     </Accordion>
@@ -175,7 +175,7 @@ const App = () => {
       answer: (
         <p>
           Vestibulum at dolor justo.{' '}
-          <a href="#" target="_blank" rel="noreferrer">
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             Curabitur
           </a>{' '}
           dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
@@ -189,7 +189,7 @@ const App = () => {
         <React.Fragment>
           <p>
             Vestibulum at dolor justo.{' '}
-            <a href="#" target="_blank" rel="noreferrer">
+            <a href="https://www.github.com" target="_blank" rel="noreferrer">
               Curabitur
             </a>{' '}
             dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
@@ -208,7 +208,7 @@ const App = () => {
         <React.Fragment>
           <p>
             Vestibulum at dolor justo.{' '}
-            <a href="#" target="_blank" rel="noreferrer">
+            <a href="https://www.github.com" target="_blank" rel="noreferrer">
               Curabitur
             </a>{' '}
             dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
