*shakes fist at webpack*

--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -5,9 +5,7 @@ source: https://github.com/primer/react-brand/tree/main/src/FAQ/FAQ.tsx
 description: Display content in a Q&A format
 ---
 
-import {Box as Container, Label} from '@primer/react'
-
-import {PropTableValues} from '../../src/components'
+import {Box as Container} from '@primer/react'
 
 ```js
 import {FAQ} from '@primer/react-brand'
