--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -19,11 +19,11 @@ import {FAQ} from '@primer/react-brand'
 <Container p={3}>
   <FAQ>
     <FAQ.Heading align="center">Frequently asked questions</FAQ.Heading>
-    <Accordion>
-      <Accordion.Heading>
+    <FAQ.Question>
+      <FAQ.Question.Heading>
         What&apos;s included in the GitHub for Startups offer?
-      </Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           All GitHub for Startups companies receive up to 20 seats of GitHub
           Enterprise for free for year one and 50% off year two. Learn more
@@ -33,11 +33,11 @@ import {FAQ} from '@primer/react-brand'
           </a>
           .
         </p>
-      </Accordion.Content>
-    </Accordion>
-    <Accordion>
-      <Accordion.Heading>Who is eligible to apply?</Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Content>
+    </FAQ.Question>
+    <FAQ.Question>
+      <FAQ.Question.Heading>Who is eligible to apply?</FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           Startups who meet the following criteria are eligible to apply for the
           program:
@@ -64,13 +64,13 @@ import {FAQ} from '@primer/react-brand'
             </Text>
           </li>
         </ol>
-      </Accordion.Content>
-    </Accordion>
-    <Accordion>
-      <Accordion.Heading>
+      </FAQ.Question.Content>
+    </FAQ.Question>
+    <FAQ.Question>
+      <FAQ.Question.Heading>
         What if my startup is not eligible? Are there other resources for me?
-      </Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           If you’re not currently eligible for the GitHub for Startups but would
           like to try GitHub Enterprise, please feel to sign up for a trial
@@ -78,13 +78,13 @@ import {FAQ} from '@primer/react-brand'
             here
           </a>.
         </p>
-      </Accordion.Content>
-    </Accordion>
-    <Accordion>
-      <Accordion.Heading>
+      </FAQ.Question.Content>
+    </FAQ.Question>
+    <FAQ.Question>
+      <FAQ.Question.Heading>
         How can my organization become a GitHub for Startups partner?
-      </Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           Any investor, accelerator, or startup support organization is eligible
           to apply for the GitHub for Startups program.
@@ -95,8 +95,8 @@ import {FAQ} from '@primer/react-brand'
           </a>
           .
         </p>
-      </Accordion.Content>
-    </Accordion>
+      </FAQ.Question.Content>
+    </FAQ.Question>
   </FAQ>
 </Container>
 ```
@@ -108,36 +108,36 @@ import {FAQ} from '@primer/react-brand'
   <FAQ>
     <FAQ.Heading align="center">Frequently asked questions</FAQ.Heading>
     <FAQ.Subheading align="center">Subscriptions & Payments</FAQ.Subheading>
-    <Accordion>
-      <Accordion.Heading>
+    <FAQ.Question>
+      <FAQ.Question.Heading>
         What are the differences between GitHub Free, GitHub Pro, GitHub Team
         and GitHub Enterprise plans?
-      </Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           GitHub Free is our basic plan created for individuals and small teams
           to collaborate on private and public repositories.
         </p>
-      </Accordion.Content>
-    </Accordion>
-    <Accordion>
-      <Accordion.Heading>
+      </FAQ.Question.Content>
+    </FAQ.Question>
+    <FAQ.Question>
+      <FAQ.Question.Heading>
         How do I view and manage my subscription?
-      </Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           You can view your account's subscription, your other paid features and
           products, and your next billing date in your account's billing
           settings.
         </p>
-      </Accordion.Content>
-    </Accordion>
+      </FAQ.Question.Content>
+    </FAQ.Question>
     <FAQ.Subheading align="center">Actions & Packages</FAQ.Subheading>
-    <Accordion>
-      <Accordion.Heading>
+    <FAQ.Question>
+      <FAQ.Question.Heading>
         Which plans include access to GitHub Actions and Packages?
-      </Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           GitHub Actions and Packages are free for public repositories and
           packages on all our current per-user plans, while private repositories
@@ -146,19 +146,19 @@ import {FAQ} from '@primer/react-brand'
           (Bronze, Silver, Gold etc) do not come with access to GitHub Actions
           and Packages but they can be upgraded to a current per-user plan.
         </p>
-      </Accordion.Content>
-    </Accordion>
-    <Accordion>
-      <Accordion.Heading>
+      </FAQ.Question.Content>
+    </FAQ.Question>
+    <FAQ.Question>
+      <FAQ.Question.Heading>
         How do I manage my spending for Actions and Packages?
-      </Accordion.Heading>
-      <Accordion.Content>
+      </FAQ.Question.Heading>
+      <FAQ.Question.Content>
         <p>
           You can manage your spending for Actions and Packages in your billing
           settings page under the payment information tab.
         </p>
-      </Accordion.Content>
-    </Accordion>
+      </FAQ.Question.Content>
+    </FAQ.Question>
   </FAQ>
 </Container>
 ```
@@ -246,10 +246,10 @@ const App = () => {
         <>
           {fixtureData.map(({question, answer}) => {
             return (
-              <Accordion key={question} open={false}>
-                <Accordion.Heading>{question}</Accordion.Heading>
-                <Accordion.Content>{answer}</Accordion.Content>
-              </Accordion>
+              <FAQ.Question key={question} open={false}>
+                <FAQ.Question.Heading>{question}</FAQ.Question.Heading>
+                <FAQ.Question.Content>{answer}</FAQ.Question.Content>
+              </FAQ.Question>
             )
           })}
         </>
