--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -23,7 +23,7 @@ import {FAQ} from '@primer/react-brand'
       <FAQ.Question.Heading>
         What&apos;s included in the GitHub for Startups offer?
       </FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           All GitHub for Startups companies receive up to 20 seats of GitHub
           Enterprise for free for year one and 50% off year two. Learn more
@@ -33,11 +33,11 @@ import {FAQ} from '@primer/react-brand'
           </a>
           .
         </p>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
     <FAQ.Question>
       <FAQ.Question.Heading>Who is eligible to apply?</FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           Startups who meet the following criteria are eligible to apply for the
           program:
@@ -64,13 +64,13 @@ import {FAQ} from '@primer/react-brand'
             </Text>
           </li>
         </ol>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
     <FAQ.Question>
       <FAQ.Question.Heading>
         What if my startup is not eligible? Are there other resources for me?
       </FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           If you’re not currently eligible for the GitHub for Startups but would
           like to try GitHub Enterprise, please feel to sign up for a trial
@@ -78,13 +78,13 @@ import {FAQ} from '@primer/react-brand'
             here
           </a>.
         </p>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
     <FAQ.Question>
       <FAQ.Question.Heading>
         How can my organization become a GitHub for Startups partner?
       </FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           Any investor, accelerator, or startup support organization is eligible
           to apply for the GitHub for Startups program.
@@ -95,7 +95,7 @@ import {FAQ} from '@primer/react-brand'
           </a>
           .
         </p>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
   </FAQ>
 </Container>
@@ -113,31 +113,31 @@ import {FAQ} from '@primer/react-brand'
         What are the differences between GitHub Free, GitHub Pro, GitHub Team
         and GitHub Enterprise plans?
       </FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           GitHub Free is our basic plan created for individuals and small teams
           to collaborate on private and public repositories.
         </p>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
     <FAQ.Question>
       <FAQ.Question.Heading>
         How do I view and manage my subscription?
       </FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           You can view your account's subscription, your other paid features and
           products, and your next billing date in your account's billing
           settings.
         </p>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
     <FAQ.Subheading align="center">Actions & Packages</FAQ.Subheading>
     <FAQ.Question>
       <FAQ.Question.Heading>
         Which plans include access to GitHub Actions and Packages?
       </FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           GitHub Actions and Packages are free for public repositories and
           packages on all our current per-user plans, while private repositories
@@ -146,18 +146,18 @@ import {FAQ} from '@primer/react-brand'
           (Bronze, Silver, Gold etc) do not come with access to GitHub Actions
           and Packages but they can be upgraded to a current per-user plan.
         </p>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
     <FAQ.Question>
       <FAQ.Question.Heading>
         How do I manage my spending for Actions and Packages?
       </FAQ.Question.Heading>
-      <FAQ.Question.Content>
+      <FAQ.Question.Answer>
         <p>
           You can manage your spending for Actions and Packages in your billing
           settings page under the payment information tab.
         </p>
-      </FAQ.Question.Content>
+      </FAQ.Question.Answer>
     </FAQ.Question>
   </FAQ>
 </Container>
@@ -248,7 +248,7 @@ const App = () => {
             return (
               <FAQ.Question key={question} open={false}>
                 <FAQ.Question.Heading>{question}</FAQ.Question.Heading>
-                <FAQ.Question.Content>{answer}</FAQ.Question.Content>
+                <FAQ.Question.Answer>{answer}</FAQ.Question.Answer>
               </FAQ.Question>
             )
           })}
