--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -20,11 +20,11 @@ import {FAQ} from '@primer/react-brand'
 <Container p={3}>
   <FAQ>
     <FAQ.Heading>Frequently asked questions</FAQ.Heading>
-    <FAQ.Question>
-      <FAQ.Question.Heading>
+    <FAQ.Item>
+      <FAQ.Question>
         What&apos;s included in the GitHub for Startups offer?
-      </FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+      </FAQ.Question>
+      <FAQ.Answer>
         <p>
           All GitHub for Startups companies receive up to 20 seats of GitHub
           Enterprise for free for year one and 50% off year two. Learn more
@@ -34,11 +34,11 @@ import {FAQ} from '@primer/react-brand'
           </a>
           .
         </p>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
-    <FAQ.Question>
-      <FAQ.Question.Heading>Who is eligible to apply?</FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+    <FAQ.Item>
+      <FAQ.Question>Who is eligible to apply?</FAQ.Question>
+      <FAQ.Answer>
         <p>
           Startups who meet the following criteria are eligible to apply for the
           program:
@@ -65,13 +65,13 @@ import {FAQ} from '@primer/react-brand'
             </Text>
           </li>
         </ol>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
-    <FAQ.Question>
-      <FAQ.Question.Heading>
+    <FAQ.Item>
+      <FAQ.Question>
         What if my startup is not eligible? Are there other resources for me?
-      </FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+      </FAQ.Question>
+      <FAQ.Answer>
         <p>
           If you’re not currently eligible for the GitHub for Startups but would
           like to try GitHub Enterprise, please feel to sign up for a trial
@@ -79,13 +79,13 @@ import {FAQ} from '@primer/react-brand'
             here
           </a>.
         </p>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
-    <FAQ.Question>
-      <FAQ.Question.Heading>
+    <FAQ.Item>
+      <FAQ.Question>
         How can my organization become a GitHub for Startups partner?
-      </FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+      </FAQ.Question>
+      <FAQ.Answer>
         <p>
           Any investor, accelerator, or startup support organization is eligible
           to apply for the GitHub for Startups program.
@@ -96,7 +96,7 @@ import {FAQ} from '@primer/react-brand'
           </a>
           .
         </p>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
   </FAQ>
 </Container>
@@ -120,36 +120,36 @@ Use `FAQ.Subheading` to create a visual separation between your `FAQ.Question` d
   <FAQ>
     <FAQ.Heading align="center">Frequently asked questions</FAQ.Heading>
     <FAQ.Subheading align="center">Subscriptions & Payments</FAQ.Subheading>
-    <FAQ.Question>
-      <FAQ.Question.Heading>
+    <FAQ.Item>
+      <FAQ.Question>
         What are the differences between GitHub Free, GitHub Pro, GitHub Team
         and GitHub Enterprise plans?
-      </FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+      </FAQ.Question>
+      <FAQ.Answer>
         <p>
           GitHub Free is our basic plan created for individuals and small teams
           to collaborate on private and public repositories.
         </p>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
-    <FAQ.Question>
-      <FAQ.Question.Heading>
+    <FAQ.Item>
+      <FAQ.Question>
         How do I view and manage my subscription?
-      </FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+      </FAQ.Question>
+      <FAQ.Answer>
         <p>
           You can view your account's subscription, your other paid features and
           products, and your next billing date in your account's billing
           settings.
         </p>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
     <FAQ.Subheading align="center">Actions & Packages</FAQ.Subheading>
-    <FAQ.Question>
-      <FAQ.Question.Heading>
+    <FAQ.Item>
+      <FAQ.Question>
         Which plans include access to GitHub Actions and Packages?
-      </FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+      </FAQ.Question>
+      <FAQ.Answer>
         <p>
           GitHub Actions and Packages are free for public repositories and
           packages on all our current per-user plans, while private repositories
@@ -158,18 +158,18 @@ Use `FAQ.Subheading` to create a visual separation between your `FAQ.Question` d
           (Bronze, Silver, Gold etc) do not come with access to GitHub Actions
           and Packages but they can be upgraded to a current per-user plan.
         </p>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
-    <FAQ.Question>
-      <FAQ.Question.Heading>
+    <FAQ.Item>
+      <FAQ.Question>
         How do I manage my spending for Actions and Packages?
-      </FAQ.Question.Heading>
-      <FAQ.Question.Answer>
+      </FAQ.Question>
+      <FAQ.Answer>
         <p>
           You can manage your spending for Actions and Packages in your billing
           settings page under the payment information tab.
         </p>
-      </FAQ.Question.Answer>
+      </FAQ.Answer>
     </FAQ.Question>
   </FAQ>
 </Container>
@@ -259,8 +259,8 @@ const App = () => {
           {fixtureData.map(({question, answer}) => {
             return (
               <FAQ.Question key={question} open={false}>
-                <FAQ.Question.Heading>{question}</FAQ.Question.Heading>
-                <FAQ.Question.Answer>{answer}</FAQ.Question.Answer>
+                <FAQ.Question>{question}</FAQ.Question>
+                <FAQ.Answer>{answer}</FAQ.Answer>
               </FAQ.Question>
             )
           })}
