change visual toggles to monospace

--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -118,8 +118,8 @@ Use `FAQ.Subheading` to create a visual separation between your `FAQ.Question` d
 ```jsx live
 <Container p={3}>
   <FAQ>
-    <FAQ.Heading align="center">Frequently asked questions</FAQ.Heading>
-    <FAQ.Subheading align="center">Subscriptions & Payments</FAQ.Subheading>
+    <FAQ.Heading>Frequently asked questions</FAQ.Heading>
+    <FAQ.Subheading>Subscriptions & Payments</FAQ.Subheading>
     <FAQ.Item>
       <FAQ.Question>
         What are the differences between GitHub Free, GitHub Pro, GitHub Team
@@ -142,7 +142,7 @@ Use `FAQ.Subheading` to create a visual separation between your `FAQ.Question` d
         </p>
       </FAQ.Answer>
     </FAQ.Item>
-    <FAQ.Subheading align="center">Actions & Packages</FAQ.Subheading>
+    <FAQ.Subheading>Actions & Packages</FAQ.Subheading>
     <FAQ.Item>
       <FAQ.Question>
         Which plans include access to GitHub Actions and Packages?
