--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -273,7 +273,7 @@ render(<App />)
 
 ### Color customization
 
-`FAQ` uses various component-specific css variables that can be used to adjust the color to suit bespoke use-cases.
+`FAQ` surfaces component-specific css variables that can be used to adjust the color where needed.
 
 ```javascript live noinline
 const App = () => {
