fix docs examples for overrides

--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -280,7 +280,7 @@ const App = () => {
   const designTokenOverrides = `
   .custom-colors {
     /* Modify the values of these tokens */
-    --brand-FAQ-heading-color: linear-gradient(271.72deg, #a2facf 7.09%, #64acff 96.61%);
+    --brand-FAQ-heading-color: linear-gradient(271.72deg, var(--base-color-scale-green-1) 7.09%, var(--base-color-scale-blue-3) 96.61%);
     --brand-Accordion-toggle-color-start: var(--base-color-scale-green-1);
     --brand-Accordion-toggle-color-end: var(--base-color-scale-blue-3);
 
