add basic InlineLink component

--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -29,9 +29,13 @@ import {FAQ} from '@primer/react-brand'
           All GitHub for Startups companies receive up to 20 seats of GitHub
           Enterprise for free for year one and 50% off year two. Learn more
           about the features and capabilities of GitHub Enterprise{' '}
-          <a href="https://www.github.com" target="_blank" rel="noreferrer">
+          <InlineLink
+            href="https://www.github.com"
+            target="_blank"
+            rel="noreferrer"
+          >
             here
-          </a>
+          </InlineLink>
           .
         </p>
       </FAQ.Answer>
@@ -75,9 +79,13 @@ import {FAQ} from '@primer/react-brand'
         <p>
           If you’re not currently eligible for the GitHub for Startups but would
           like to try GitHub Enterprise, please feel to sign up for a trial
-          <a href="https://www.github.com" target="_blank" rel="noreferrer">
+          <InlineLink
+            href="https://www.github.com"
+            target="_blank"
+            rel="noreferrer"
+          >
             here
-          </a>.
+          </InlineLink>.
         </p>
       </FAQ.Answer>
     </FAQ.Item>
@@ -91,9 +99,13 @@ import {FAQ} from '@primer/react-brand'
           to apply for the GitHub for Startups program.
         </p>
         <p>
-          <a href="https://www.github.com" target="_blank" rel="noreferrer">
+          <InlineLink
+            href="https://www.github.com"
+            target="_blank"
+            rel="noreferrer"
+          >
             Apply here
-          </a>
+          </InlineLink>
           .
         </p>
       </FAQ.Answer>
@@ -183,9 +195,13 @@ const App = () => {
       answer: (
         <p>
           Vestibulum at dolor justo.{' '}
-          <a href="https://www.github.com" target="_blank" rel="noreferrer">
+          <InlineLink
+            href="https://www.github.com"
+            target="_blank"
+            rel="noreferrer"
+          >
             Curabitur
-          </a>{' '}
+          </InlineLink>{' '}
           dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
           interdum ligula at nisi rhoncus malesuada et non eros.
         </p>
@@ -197,9 +213,13 @@ const App = () => {
         <React.Fragment>
           <p>
             Vestibulum at dolor justo.{' '}
-            <a href="https://www.github.com" target="_blank" rel="noreferrer">
+            <InlineLink
+              href="https://www.github.com"
+              target="_blank"
+              rel="noreferrer"
+            >
               Curabitur
-            </a>{' '}
+            </InlineLink>{' '}
             dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
             interdum ligula at nisi rhoncus malesuada et non eros.
           </p>
@@ -216,9 +236,13 @@ const App = () => {
         <React.Fragment>
           <p>
             Vestibulum at dolor justo.{' '}
-            <a href="https://www.github.com" target="_blank" rel="noreferrer">
+            <InlineLink
+              href="https://www.github.com"
+              target="_blank"
+              rel="noreferrer"
+            >
               Curabitur
-            </a>{' '}
+            </InlineLink>{' '}
             dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
             interdum ligula at nisi rhoncus malesuada et non eros.
           </p>
