change left to start and right to end

--- a/docs/content/components/Hero.mdx
+++ b/docs/content/components/Hero.mdx
@@ -57,10 +57,10 @@ import {Hero} from '@primer/react-brand'
 
 ### Hero
 
-| Name                                    | Type                                                                                                               | Default  | Description                             |
-| :-------------------------------------- | :----------------------------------------------------------------------------------------------------------------- | :------: | :-------------------------------------- |
-| `heading` <Label>Required</Label>       | `string`                                                                                                           |          | Primary heading, which defaults to a H1 |
-| `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |          | Primary call to action                  |
-| `secondaryAction`                       | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |          | Optional secondary call to action       |
-| `align`                                 | `'center'`, `'left'`                                                                                               | `'left'` | Optional text alignment                 |
-| `description`                           | `string`                                                                                                           |          | Optional accompanying body text         |
+| Name                                    | Type                                                                                                               |  Default  | Description                             |
+| :-------------------------------------- | :----------------------------------------------------------------------------------------------------------------- | :-------: | :-------------------------------------- |
+| `heading` <Label>Required</Label>       | `string`                                                                                                           |           | Primary heading, which defaults to a H1 |
+| `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Primary call to action                  |
+| `secondaryAction`                       | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Optional secondary call to action       |
+| `align`                                 | `'center'`, `'start'`                                                                                              | `'start'` | Optional text alignment                 |
+| `description`                           | `string`                                                                                                           |           | Optional accompanying body text         |
