--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -7,6 +7,8 @@ description: Display content in a Q&A format
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
 import {Box as Container} from '@primer/react'
+import {PropTableValues} from '../../src/components'
+import {Label} from '@primer/react'
 
 ```js
 import {FAQ} from '@primer/react-brand'
@@ -374,3 +376,49 @@ render(<App />)
 ```
 
 ## Component props
+
+### FAQ <Label>Required</Label>
+
+| Name       | Type                                                                                                                                                                | Default | Description                         |
+| :--------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :-----: | :---------------------------------- |
+| `children` | <PropTableValues values={[<a href="#faq-heading">FAQ.Heading</a>, <a href="#faq-subheading">FAQ.Subheading</a>, <a href="#faq-item">FAQ.Item</a>]} addLineBreaks /> |         | Root element for the FAQ component. |
+
+<h3 id="faq-heading">
+  FAQ.Heading <Label>Required</Label>
+</h3>
+
+| Name        | Type                                                            |  Default   | Description             |
+| :---------- | :-------------------------------------------------------------- | :--------: | :---------------------- |
+| `align`     | <PropTableValues values={['start', 'center' ]} addLineBreaks /> | `'center'` | Heading text alignement |
+| `children`  | `string`                                                        |            | Heading text            |
+| `className` | `string`                                                        |            | Heading custom class    |
+| `size`      | <PropTableValues values={['medium', 'large' ]} addLineBreaks /> | `'medium'` | Heading text size       |
+
+<h3 id="faq-subheading">FAQ.Subheading</h3>
+
+| Name        | Type     | Default | Description              |
+| :---------- | :------- | :-----: | :----------------------- |
+| `children`  | `string` |         | Sub-heading text         |
+| `className` | `string` |         | Sub-heading custom class |
+
+<h3 id="faq-item">FAQ.Item</h3>
+
+| Name        | Type                                                                                                                        | Default | Description                  |
+| :---------- | :-------------------------------------------------------------------------------------------------------------------------- | :-----: | :--------------------------- |
+| `open`      | `boolean`                                                                                                                   | `false` | Sets answer visibility       |
+| `className` | `string`                                                                                                                    |         | Sets a custom class          |
+| `children`  | <PropTableValues values={[<a href="#faq-question">FAQ.Question</a>, <a href="#faq-answer">FAQ.Answer</a>]} addLineBreaks /> |         | FAQ question and answer pair |
+
+<h3 id="faq-question">FAQ.Question</h3>
+
+| Name        | Type     | Default | Description                             |
+| :---------- | :------- | :-----: | :-------------------------------------- |
+| `className` | `string` |         | Sets a custom class on the root element |
+| `children`  | `string` |         | Question text                           |
+
+<h3 id="faq-answer">FAQ.Answer</h3>
+
+| Name        | Type     | Default | Description                                                          |
+| :---------- | :------- | :-----: | :------------------------------------------------------------------- |
+| `className` | `string` |         | Sets a custom class on the root element                              |
+| `children`  | `Text`   |         | Answer text. `Text` children are automatically formatted and styled. |
