add accessibility test

--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -2,6 +2,7 @@
 title: FAQ
 status: Experimental
 source: https://github.com/primer/react-brand/tree/main/src/FAQ/FAQ.tsx
+storybook: '/react-brand/storybook/?path=/story/components-faq--default'
 description: Display content in a Q&A format
 ---
 
