--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -419,7 +419,7 @@ render(<App />)
 
 <h3 id="faq-answer">FAQ.Answer</h3>
 
-| Name        | Type     | Default | Description                                                          |
-| :---------- | :------- | :-----: | :------------------------------------------------------------------- |
-| `className` | `string` |         | Sets a custom class on the root element                              |
-| `children`  | `Text`   |         | Answer text. `Text` children are automatically formatted and styled. |
+| Name        | Type           | Default | Description                                  |
+| :---------- | :------------- | :-----: | :------------------------------------------- |
+| `className` | `string`       |         | Sets a custom class on the root element      |
+| `children`  | `ReactElement` |         | `<p>` or `<Text>` components are recommended |
