--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -307,7 +307,7 @@ const App = () => {
   const designTokenOverrides = `
   .custom-colors[data-color-mode='dark'] {
 
-    /* 
+    /*
      * Modify the value of these tokens.
      * Remember to apply light mode equivalents if you're enabling theme switching.
      */
@@ -318,7 +318,7 @@ const App = () => {
     padding: 3rem;
     background-color: var(--brand-color-canvas-default);
   }
-    
+
 
   .custom-heading {
     background: var(--brand-FAQ-heading-color);
@@ -380,9 +380,12 @@ render(<App />)
 
 ### FAQ <Label>Required</Label>
 
-| Name       | Type                                                                                                                                                                | Default | Description                         |
-| :--------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :-----: | :---------------------------------- |
-| `children` | <PropTableValues values={[<a href="#faq-heading">FAQ.Heading</a>, <a href="#faq-subheading">FAQ.Subheading</a>, <a href="#faq-item">FAQ.Item</a>]} addLineBreaks /> |         | Root element for the FAQ component. |
+| Name        | Type                                                                                                                                                                | Default | Description                         |
+| :---------  | :------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :-----: | :---------------------------------- |
+| `className` | `string`                                                                                                                                                            |         | Sets a custom class                 |
+| `id`        | `string`                                                                                                                                                            |         | Sets a custom id                    |
+| `ref`       | React.RefObject                                                                                                                                                     |         | React Reference                     |
+| `children`  | <PropTableValues values={[<a href="#faq-heading">FAQ.Heading</a>, <a href="#faq-subheading">FAQ.Subheading</a>, <a href="#faq-item">FAQ.Item</a>]} addLineBreaks /> |         | Root element for the FAQ component. |
 
 <h3 id="faq-heading">
   FAQ.Heading <Label>Required</Label>
@@ -390,17 +393,21 @@ render(<App />)
 
 | Name        | Type                                                            |  Default   | Description             |
 | :---------- | :-------------------------------------------------------------- | :--------: | :---------------------- |
-| `align`     | <PropTableValues values={['start', 'center' ]} addLineBreaks /> | `'center'` | Heading text alignement |
+| `align`     | <PropTableValues values={['start', 'center' ]} addLineBreaks /> | `'center'` | Heading text alignment  |
 | `children`  | `string`                                                        |            | Heading text            |
 | `className` | `string`                                                        |            | Heading custom class    |
+| `id`        | `string`                                                        |            | Sets a custom id        |
+| `ref`       | React.RefObject                                                 |            | React Reference         |
 | `size`      | <PropTableValues values={['medium', 'large' ]} addLineBreaks /> | `'medium'` | Heading text size       |
 
 <h3 id="faq-subheading">FAQ.Subheading</h3>
 
-| Name        | Type     | Default | Description              |
-| :---------- | :------- | :-----: | :----------------------- |
-| `children`  | `string` |         | Sub-heading text         |
-| `className` | `string` |         | Sub-heading custom class |
+| Name        | Type            | Default | Description              |
+| :---------- | :-------------- | :-----: | :----------------------- |
+| `children`  | `string`        |         | Sub-heading text         |
+| `className` | `string`        |         | Sub-heading custom class |
+| `id`        | `string`        |         | Sets a custom id         |
+| `ref`       | React.RefObject |         | React Reference          |
 
 <h3 id="faq-item">FAQ.Item</h3>
 
@@ -409,17 +416,23 @@ render(<App />)
 | `open`      | `boolean`                                                                                                                   | `false` | Sets answer visibility       |
 | `className` | `string`                                                                                                                    |         | Sets a custom class          |
 | `children`  | <PropTableValues values={[<a href="#faq-question">FAQ.Question</a>, <a href="#faq-answer">FAQ.Answer</a>]} addLineBreaks /> |         | FAQ question and answer pair |
+| `id`        | `string`                                                                                                                    |         | Sets a custom id             |
+| `ref`       | React.RefObject                                                                                                             |         | React Reference              |
 
 <h3 id="faq-question">FAQ.Question</h3>
 
-| Name        | Type     | Default | Description                             |
-| :---------- | :------- | :-----: | :-------------------------------------- |
-| `className` | `string` |         | Sets a custom class on the root element |
-| `children`  | `string` |         | Question text                           |
+| Name        | Type            | Default | Description                             |
+| :---------- | :-------------- | :-----: | :-------------------------------------- |
+| `className` | `string`        |         | Sets a custom class on the root element |
+| `children`  | `string`        |         | Question text                           |
+| `id`        | `string`        |         | Sets a custom id                        |
+| `ref`       | React.RefObject |         | React Reference                         |
 
 <h3 id="faq-answer">FAQ.Answer</h3>
 
-| Name        | Type           | Default | Description                                  |
-| :---------- | :------------- | :-----: | :------------------------------------------- |
-| `className` | `string`       |         | Sets a custom class on the root element      |
-| `children`  | `ReactElement` |         | `<p>` or `<Text>` components are recommended |
+| Name        | Type            | Default | Description                                  |
+| :---------- | :-------------- | :-----: | :------------------------------------------- |
+| `className` | `string`        |         | Sets a custom class on the root element      |
+| `children`  | `ReactElement`  |         | `<p>` or `<Text>` components are recommended |
+| `id`        | `string`        |         | Sets a custom id                             |
+| `ref`       | React.RefObject |         | React Reference                              |
